Just added more html and css to my library. It looks siccccck

--- a/index.html
+++ b/index.html
@@ -7,20 +7,30 @@
         <script src="main.js" async></script>
     </head>
     <body>
-        <h1 class="title">Justin's Library</h1>
-        <div class="all-books">
-            <div class="section">
-                <h2 class="sub-heading">What I'm currently reading</h2>
-                <div class="books"></div>
+        <div class="main-page">
+            <div class="side-bar">
+                <h1 class="title">Justin's Library</h1>
             </div>
-            <div class="section">
-                <h2 class="sub-heading">To read next</h2>
-                <div class="books"></div>
+            <div class="right-side">
+                <div class="top-bar">
+                    <div class="nav-bar">
+                        <button class="add-book">Add Book</button>
+                    </div>
+                    Good evening, Justin
+                </div>
+                <div class="all-books">
+                    <div class="section">
+                        <h2 class="sub-heading">Currently reading</h2>
+                        <div class="current-books books"></div>
+                    </div>
+                    <div class="section">
+                        <h2 class="sub-heading">All books</h2>
+                        <div class="all-books books"></div>
+                    </div>
+                </div>
             </div>
-            <div class="section">
-                <h2 class="sub-heading">Past reads</h2>
-                <div class="books"></div>
-            </div>
+            
         </div>
+        
     </body>
 </html>
