Did some GOOD WORK on the site. Have my add book layout POPPING and I did some edits on the right side

--- a/index.html
+++ b/index.html
@@ -18,19 +18,17 @@
                     </div>
                     Good evening, Justin
                 </div>
-                <div class="all-books">
+                <div class="library">
                     <div class="section">
                         <h2 class="sub-heading">Currently reading</h2>
-                        <div class="current-books books"></div>
+                        <div class="books"></div>
                     </div>
                     <div class="section">
                         <h2 class="sub-heading">All books</h2>
-                        <div class="all-books books"></div>
+                        <div class="books"></div>
                     </div>
                 </div>
             </div>
-            
         </div>
-        
     </body>
 </html>
