Did some HARD GRINDING TODAY. Finally got my transitions to go smoothly and I have my form set up. Now I just have to figure out how to wire it with Javascript and actually store what the user inputs

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="main.js" async></script>
     </head>
     <body>
-        <div class="main-page">
+        <div class="main-page blur">
             <div class="side-bar">
                 <h1 class="title">Justin's Library</h1>
             </div>
@@ -28,6 +28,31 @@
                         <div class="books"></div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="form-box">
+            <h2 class="form-title">Add a new book</h2>
+            <form class="form-input">
+                <div class="row">
+                    <label for="title">Title</label>
+                    <input type="text" id="title" name="title">
+                </div>
+                <div class="row">
+                    <label for="author">Author</label>
+                    <input type="text" id="author" name="author">
+                </div>
+                <div class="row">
+                    <label for="genre">Genre</label>
+                    <input type="text" id="genre" name="genre">
+                </div>
+                <div class=row>
+                    <label for="numPages">Pages</label>
+                    <input type="text" id="numPages" name="numPages">
+                </div>
+            </form>>
+            <div class="buttons">
+                <button class="cancel">Cancel</button>
+                <button class="submit">Submit</button>
             </div>
         </div>
     </body>
