Just did some sick changes

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <div class="library">
                     <div class="headers">
                         <div class="section">
-                            <h2 class="sub-heading">Currently reading</h2>
+                            <a class="sub-heading">Currently reading</a>
                             <div class="books"></div>
                         </div>
                         <div class="section">
-                            <h2 class="sub-heading">All books</h2>
+                            <a class="sub-heading">All books</a>
                             <div class="books"></div>
                         </div>
                     </div>
