did a lot of good work today. I added icons for read as well as an options icon. I want to add a popup when you click options to allow users to edit the book etc. I also made it so the greeting message changes based on time

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div class="nav-bar">
                         <button class="add-book">Add Book</button>
                     </div>
-                    Good evening, Justin
+                    <div class="greeting-message">Good evening, Justin</div>
                 </div>
                 <div class="library">
                     <div class="headers">
