Did some good work on the drop down options menu. However, since adding it, I have a weird glitch where the scroll down menu appears (when i didn't do anything). However, when I click on the 3 dots, the scroll menu will go away. Have to look into this.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
                     <button class="submit" type="submit">Submit</button>
                 </div>
             </form>>
-            
+        </div>
+        <div class="options-menu">
+            <div class="option read">Mark as read</div>
+            <div class="option reading">Mark as reading</div>
+            <div class="option edit">Edit</div> 
+            <div class="option delete">Delete</div> 
         </div>
     </body>
 </html>
