--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
                 <div class="library">
                     <div class="headers">
                         <div class="section">
-                            <a class="sub-heading">Currently reading</a>
-                            <div class="books"></div>
-                        </div>
-                        <div class="section">
                             <a class="sub-heading">All books</a>
                             <div class="books"></div>
                         </div>
@@ -38,7 +34,7 @@
         </div>
         <div class="form-box">
             <h2 class="form-title">Add a new book</h2>
-            <form class="form-input">
+            <form class="form-input" autocomplete="off">
                 <div class="row">
                     <label for="title">Title</label>
                     <input type="text" id="title" name="title">
@@ -63,7 +59,7 @@
         </div>
         <div class="options-menu">
             <div class="option read">Mark as read</div>
-            <div class="option reading">Mark as reading</div>
+            <div class="option unread">Mark as unread</div>
             <div class="option edit">Edit</div> 
             <div class="option delete">Delete</div> 
         </div>
